2005-11-14 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/crc16.h (_crc_ibutton_update): new function.
	[patch #3925]: Dallas iButton 8-bit CRC

2005-11-14 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Galen Seitz:
	* avr-libc.spec.in: unify location of doc files.
	[patch #4622] unify doc file location in rpms

2005-11-13 Anatoly Sokolov <aesok@post.ru>

	* libm/fplib/fp_split.S: Make labels local.
	* libm/fplib/tanh.S: speedup tanh function.
	patch #3592: speedup tanh function in libm

2005-11-11 Anatoly Sokolov <aesok@post.ru>

	* common/macros.inc(X_movw): Adds the possibility to use 
	upper case latters in register names: R0..R31.
	(Patch submitted by Dmitry Xmelkov.)
	(LOAD_X): Deleted.
	(LOAD_Z): Deleted.

2005-11-11 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/gen-avr-lib-tree.sh (CFLAGS_SPEED): change
	from -O3 to -Os.  Mostly, this even yields the fastest
	code anyway.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* include/math.h (exp): Rename argument.
	(inverse): Deleted.
	[Fixed bug #13340]

2005-11-11 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/rel-method.dox: Update for new configuration
	method, fix some typos.
	* doc/api/Makefile.am: replace "signal" in the comment
	by "vector" to reflect our changed naming convention.

2005-11-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Risto Eerola:
	* include/avr/io43u32x.h: Unify (old-style SIG_xxx)
	interrupt vector names.
	* include/avr/io43u35x.h: (Ditto.)
	* include/avr/io90pwmx.h: (Ditto.)
	* include/avr/iomx8.h: (Ditto.)
	* include/avr/iomxx4.h: (Ditto.)
	* include/avr/iotn11.h: (Ditto.)
	* include/avr/iotn12.h: (Ditto.)
	* include/avr/iotn15.h: (Ditto.)
	* include/avr/iotn2313.h: (Ditto.)
	* include/avr/iotn26.h: (Ditto.)
	* include/avr/iotnx5.h: (Ditto.)
	* doc/api/vectortable.dox: Regenerate, document the
	changes.
	patch #4505: Unified interrupt vector names in header files.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>
