@@ -96,6 +96,8 @@
   [patch #3925] Dallas iButton 8-bit CRC
   [patch #4087] C99 conformal headers stdint.h and inttypes.h
   [patch #4505] Unified interrupt vector names in header files
+  [patch #4557] Adds to the fplib usage of MUL instruction 
+                in group avr4; avr5 devices
   [patch #4608] rpm spec file update
   [patch #4622] unify doc file location in rpms
 
